# natural_language_to_date

./: README.md  main.py  nldate.py  pyproject.toml
src/: nldate.py
src/nldate/: __init__.py  nldate.py
src/nldate.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_main.py
